--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -10,6 +10,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -17,7 +24,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title Bibliotecas\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
