--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -99,16 +99,12 @@
         "float_columns = data2021.select_dtypes(include='float').columns\n",
         "data2021[float_columns] = data2021[float_columns].astype(int)\n",
         "\n",
-        "# Delimit dataset for pregnant and postpartum women\n",
+        "# Creating new variable\n",
         "data2021['GRAVIDEZ'] = np.where(data2021['CS_GESTANT'].isin([1, 2, 3, 4]), data2021['CS_GESTANT'], 0)\n",
         "data2021.loc[data2021['PUERPERA'] == 1, 'GRAVIDEZ'] = 5 # Defining that puerperal women receive 5 in the dataset\n",
         "\n",
-        "# Delimit dataset for confirmed COVID cases\n",
-        "data2021['COVID_LABORATORIAL'] = 0\n",
-        "data2021.loc[data2021['CLASSI_FIN'] == 5, 'COVID_LABORATORIAL'] = 5\n",
-        "data2021.loc[data2021['CRITERIO'] == 1, 'COVID_LABORATORIAL'] = 1\n",
-        "\n",
         "# Filter the dataset\n",
+        "# Delimit dataset for pregnant and postpartum women, confirmed COVID cases with the laboratory method\n",
         "data_temp2021 = data2021.loc[(data2021['GRAVIDEZ'] != 0) & (data2021['CLASSI_FIN'] == 5) & (data2021['CRITERIO'] == 1)].copy()\n",
         "data_temp2021.reset_index(inplace=True, drop=True)"
       ]
@@ -143,16 +139,12 @@
         "float_columns_2022 = data2022.select_dtypes(include='float').columns\n",
         "data2022[float_columns_2022] = data2022[float_columns_2022].astype(int)\n",
         "\n",
-        "# Delimit dataset for pregnant and postpartum women\n",
+        "# Creating new variable\n",
         "data2022['GRAVIDEZ'] = np.where(data2022['CS_GESTANT'].isin([1, 2, 3, 4]), data2022['CS_GESTANT'], 0)\n",
         "data2022.loc[data2022['PUERPERA'] == 1, 'GRAVIDEZ'] = 5\n",
         "\n",
-        "# Delimit dataset for confirmed COVID cases\n",
-        "data2022['COVID_LABORATORIAL'] = 0\n",
-        "data2022.loc[data2022['CLASSI_FIN'] == 5, 'COVID_LABORATORIAL'] = 5\n",
-        "data2022.loc[data2022['CRITERIO'] == 1, 'COVID_LABORATORIAL'] = 1\n",
-        "\n",
         "# Filter the dataset\n",
+        "# Delimit dataset for pregnant and postpartum women, confirmed COVID cases with the laboratory method\n",
         "data_temp2022 = data2022.loc[(data2022['GRAVIDEZ'] != 0) & (data2022['CLASSI_FIN'] == 5) & (data2022['CRITERIO'] == 1)].copy()\n",
         "data_temp2022.reset_index(inplace=True, drop=True)"
       ]
@@ -259,9 +251,9 @@
         "\n",
         "# Creating a COVID variant variable\n",
         "df_concat['VARIANTE_COVID'] = 0\n",
-        "df_concat.loc[selection_gamma, 'VARIANTE_COVID'] = 1\n",
-        "df_concat.loc[selection_delta, 'VARIANTE_COVID'] = 2\n",
-        "df_concat.loc[selection_omicron, 'VARIANTE_COVID'] = 3\n",
+        "df_concat.loc[selecao_gama, 'VARIANTE_COVID'] = 1\n",
+        "df_concat.loc[selecao_delta, 'VARIANTE_COVID'] = 2\n",
+        "df_concat.loc[selecao_omicrom, 'VARIANTE_COVID'] = 3\n",
         "\n",
         "df_concat = df_concat.loc[(df_concat['VARIANTE_COVID'] != 0)]\n",
         "df_concat.reset_index(inplace=True, drop=True)\n",
