--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 49,
       "metadata": {
         "id": "yYyCBlV9hRCx"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 50,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -78,7 +78,7 @@
               "(447281, 38)"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -109,12 +109,264 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
         "data2022 = original_data_2022.copy(deep=True)\n",
         "data2021 = original_data_2021.copy(deep=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1733517 entries, 0 to 1733516\n",
+            "Data columns (total 38 columns):\n",
+            " #   Column      Dtype  \n",
+            "---  ------      -----  \n",
+            " 0   SG_UF_NOT   object \n",
+            " 1   CS_SEXO     object \n",
+            " 2   NU_IDADE_N  int64  \n",
+            " 3   CS_GESTANT  int64  \n",
+            " 4   CS_RACA     int64  \n",
+            " 5   CS_ESCOL_N  float64\n",
+            " 6   FEBRE       float64\n",
+            " 7   TOSSE       float64\n",
+            " 8   GARGANTA    float64\n",
+            " 9   DISPNEIA    float64\n",
+            " 10  DESC_RESP   float64\n",
+            " 11  SATURACAO   float64\n",
+            " 12  DIARREIA    float64\n",
+            " 13  VOMITO      float64\n",
+            " 14  PUERPERA    float64\n",
+            " 15  CARDIOPATI  float64\n",
+            " 16  HEMATOLOGI  float64\n",
+            " 17  SIND_DOWN   float64\n",
+            " 18  HEPATICA    float64\n",
+            " 19  ASMA        float64\n",
+            " 20  DIABETES    float64\n",
+            " 21  NEUROLOGIC  float64\n",
+            " 22  PNEUMOPATI  float64\n",
+            " 23  IMUNODEPRE  float64\n",
+            " 24  RENAL       float64\n",
+            " 25  OBESIDADE   float64\n",
+            " 26  OUT_MORBI   float64\n",
+            " 27  UTI         float64\n",
+            " 28  RAIOX_RES   float64\n",
+            " 29  DT_COLETA   object \n",
+            " 30  CLASSI_FIN  float64\n",
+            " 31  CRITERIO    float64\n",
+            " 32  EVOLUCAO    float64\n",
+            " 33  DOR_ABD     float64\n",
+            " 34  FADIGA      float64\n",
+            " 35  PERD_OLFT   float64\n",
+            " 36  PERD_PALA   float64\n",
+            " 37  VACINA_COV  float64\n",
+            "dtypes: float64(32), int64(3), object(3)\n",
+            "memory usage: 502.6+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "data2021.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Percentage of missing data for each feature - 2021"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "SIND_DOWN     66.808690\n",
+              "HEPATICA      66.807825\n",
+              "PUERPERA      66.702028\n",
+              "HEMATOLOGI    66.697183\n",
+              "IMUNODEPRE    66.365602\n",
+              "RENAL         66.113918\n",
+              "ASMA          65.970740\n",
+              "NEUROLOGIC    65.888134\n",
+              "PNEUMOPATI    65.864367\n",
+              "OBESIDADE     64.333664\n",
+              "DIABETES      59.295467\n",
+              "OUT_MORBI     58.725066\n",
+              "CARDIOPATI    56.064002\n",
+              "RAIOX_RES     42.634021\n",
+              "CS_ESCOL_N    35.349466\n",
+              "DOR_ABD       34.872401\n",
+              "PERD_PALA     34.121673\n",
+              "PERD_OLFT     34.086600\n",
+              "VOMITO        33.598401\n",
+              "DIARREIA      32.570203\n",
+              "GARGANTA      31.292453\n",
+              "FADIGA        30.629235\n",
+              "VACINA_COV    26.440641\n",
+              "DESC_RESP     20.290715\n",
+              "FEBRE         18.059644\n",
+              "SATURACAO     16.789913\n",
+              "UTI           13.661187\n",
+              "TOSSE         13.626345\n",
+              "DISPNEIA      13.100823\n",
+              "DT_COLETA      9.793097\n",
+              "EVOLUCAO       9.608790\n",
+              "CRITERIO       7.708145\n",
+              "CLASSI_FIN     5.160953\n",
+              "CS_SEXO        0.000000\n",
+              "CS_RACA        0.000000\n",
+              "CS_GESTANT     0.000000\n",
+              "NU_IDADE_N     0.000000\n",
+              "SG_UF_NOT      0.000000\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "(data2021.isnull().sum()/data2021.shape[0]*100).sort_values(ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 447281 entries, 0 to 447280\n",
+            "Data columns (total 38 columns):\n",
+            " #   Column      Non-Null Count   Dtype  \n",
+            "---  ------      --------------   -----  \n",
+            " 0   SG_UF_NOT   447281 non-null  object \n",
+            " 1   CS_SEXO     447281 non-null  object \n",
+            " 2   NU_IDADE_N  447281 non-null  int64  \n",
+            " 3   CS_GESTANT  447281 non-null  int64  \n",
+            " 4   CS_RACA     447281 non-null  int64  \n",
+            " 5   CS_ESCOL_N  276723 non-null  float64\n",
+            " 6   FEBRE       355862 non-null  float64\n",
+            " 7   TOSSE       382409 non-null  float64\n",
+            " 8   GARGANTA    302555 non-null  float64\n",
+            " 9   DISPNEIA    366140 non-null  float64\n",
+            " 10  DESC_RESP   343035 non-null  float64\n",
+            " 11  SATURACAO   347937 non-null  float64\n",
+            " 12  DIARREIA    291999 non-null  float64\n",
+            " 13  VOMITO      294248 non-null  float64\n",
+            " 14  PUERPERA    150497 non-null  float64\n",
+            " 15  CARDIOPATI  192873 non-null  float64\n",
+            " 16  HEMATOLOGI  151519 non-null  float64\n",
+            " 17  SIND_DOWN   150907 non-null  float64\n",
+            " 18  HEPATICA    150762 non-null  float64\n",
+            " 19  ASMA        156509 non-null  float64\n",
+            " 20  DIABETES    178133 non-null  float64\n",
+            " 21  NEUROLOGIC  159029 non-null  float64\n",
+            " 22  PNEUMOPATI  157972 non-null  float64\n",
+            " 23  IMUNODEPRE  154696 non-null  float64\n",
+            " 24  RENAL       155238 non-null  float64\n",
+            " 25  OBESIDADE   152967 non-null  float64\n",
+            " 26  OUT_MORBI   187460 non-null  float64\n",
+            " 27  UTI         377167 non-null  float64\n",
+            " 28  RAIOX_RES   258206 non-null  float64\n",
+            " 29  DT_COLETA   409412 non-null  object \n",
+            " 30  CLASSI_FIN  406008 non-null  float64\n",
+            " 31  CRITERIO    394403 non-null  float64\n",
+            " 32  EVOLUCAO    378260 non-null  float64\n",
+            " 33  DOR_ABD     287792 non-null  float64\n",
+            " 34  FADIGA      298882 non-null  float64\n",
+            " 35  PERD_OLFT   283578 non-null  float64\n",
+            " 36  PERD_PALA   283293 non-null  float64\n",
+            " 37  VACINA_COV  446805 non-null  float64\n",
+            "dtypes: float64(32), int64(3), object(3)\n",
+            "memory usage: 129.7+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "data2022.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Percentage of missing data for each feature"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "PUERPERA      66.352919\n",
+              "HEPATICA      66.293672\n",
+              "SIND_DOWN     66.261254\n",
+              "HEMATOLOGI    66.124427\n",
+              "OBESIDADE     65.800694\n",
+              "IMUNODEPRE    65.414136\n",
+              "RENAL         65.292959\n",
+              "ASMA          65.008798\n",
+              "PNEUMOPATI    64.681710\n",
+              "NEUROLOGIC    64.445393\n",
+              "DIABETES      60.174253\n",
+              "OUT_MORBI     58.088987\n",
+              "CARDIOPATI    56.878785\n",
+              "RAIOX_RES     42.272084\n",
+              "CS_ESCOL_N    38.132181\n",
+              "PERD_PALA     36.663306\n",
+              "PERD_OLFT     36.599587\n",
+              "DOR_ABD       35.657450\n",
+              "DIARREIA      34.716878\n",
+              "VOMITO        34.214062\n",
+              "FADIGA        33.178025\n",
+              "GARGANTA      32.356841\n",
+              "DESC_RESP     23.306601\n",
+              "SATURACAO     22.210646\n",
+              "FEBRE         20.438829\n",
+              "DISPNEIA      18.140945\n",
+              "UTI           15.675604\n",
+              "EVOLUCAO      15.431239\n",
+              "TOSSE         14.503634\n",
+              "CRITERIO      11.822098\n",
+              "CLASSI_FIN     9.227533\n",
+              "DT_COLETA      8.466490\n",
+              "VACINA_COV     0.106421\n",
+              "CS_SEXO        0.000000\n",
+              "CS_RACA        0.000000\n",
+              "CS_GESTANT     0.000000\n",
+              "NU_IDADE_N     0.000000\n",
+              "SG_UF_NOT      0.000000\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "(data2022.isnull().sum()/data2022.shape[0]*100).sort_values(ascending=False)"
       ]
     },
     {
