--- a/exploratory_Clinical features.ipynb
+++ b/exploratory_Clinical features.ipynb
@@ -32,15 +32,8 @@
         "import requests\n",
         "from sklearn.feature_selection import chi2\n",
         "import scipy.stats as stats\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn import metrics\n",
-        "import seaborn as sn\n",
-        "import statsmodels.api as sm\n",
-        "import statsmodels.formula.api as smf\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "import warnings\n",
-        "from PIL import Image"
+        "import seaborn as sn"
       ]
     },
     {
@@ -68,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -85,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -101,28 +94,25 @@
         "DICT_VACINA = {1: 'at least 1 dose', 2: 'Unvaccinated', 9: 'Ignored'}\n",
         "FAIXA_VACINA = ['at least 1 dose','Unvaccinated']\n",
         "\n",
-        "FAIXA_REGIAO = ['North','Northeast','Southeast','South','Midwest']\n"
+        "FAIXA_REGIAO = ['North','Northeast','Southeast','South','Midwest']"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Pre processing"
+        "Mapping dictionaries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
         "df['CS_RACA'] = df['CS_RACA'].map(DIC_RACA)\n",
         "df['CS_ESCOL_N'] = df['CS_ESCOL_N'].map(DIC_ESCOLARIDADE)\n",
         "df['GRAVIDEZ'] = df['GRAVIDEZ'].map(DICT_GRAVIDEZ)\n",
-        "\n",
-        "df['VACINA_COV'] = df['VACINA_COV'].fillna(9)\n",
-        "df['VACINA_COV'] =df['VACINA_COV'].astype(int)\n",
         "df['VACINA_COV'] = df['VACINA_COV'].map(DICT_VACINA)"
       ]
     },
