--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -234,7 +234,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [
         {
@@ -360,7 +360,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -374,6 +374,67 @@
       "metadata": {},
       "source": [
         "Dataclean - 2021"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 87,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1733517 entries, 0 to 1733516\n",
+            "Data columns (total 38 columns):\n",
+            " #   Column      Dtype \n",
+            "---  ------      ----- \n",
+            " 0   SG_UF_NOT   object\n",
+            " 1   CS_SEXO     object\n",
+            " 2   NU_IDADE_N  int64 \n",
+            " 3   CS_GESTANT  int64 \n",
+            " 4   CS_RACA     int64 \n",
+            " 5   CS_ESCOL_N  int64 \n",
+            " 6   FEBRE       int64 \n",
+            " 7   TOSSE       int64 \n",
+            " 8   GARGANTA    int64 \n",
+            " 9   DISPNEIA    int64 \n",
+            " 10  DESC_RESP   int64 \n",
+            " 11  SATURACAO   int64 \n",
+            " 12  DIARREIA    int64 \n",
+            " 13  VOMITO      int64 \n",
+            " 14  PUERPERA    int64 \n",
+            " 15  CARDIOPATI  int64 \n",
+            " 16  HEMATOLOGI  int64 \n",
+            " 17  SIND_DOWN   int64 \n",
+            " 18  HEPATICA    int64 \n",
+            " 19  ASMA        int64 \n",
+            " 20  DIABETES    int64 \n",
+            " 21  NEUROLOGIC  int64 \n",
+            " 22  PNEUMOPATI  int64 \n",
+            " 23  IMUNODEPRE  int64 \n",
+            " 24  RENAL       int64 \n",
+            " 25  OBESIDADE   int64 \n",
+            " 26  OUT_MORBI   int64 \n",
+            " 27  UTI         int64 \n",
+            " 28  RAIOX_RES   int64 \n",
+            " 29  DT_COLETA   object\n",
+            " 30  CLASSI_FIN  int64 \n",
+            " 31  CRITERIO    int64 \n",
+            " 32  EVOLUCAO    int64 \n",
+            " 33  DOR_ABD     int64 \n",
+            " 34  FADIGA      int64 \n",
+            " 35  PERD_OLFT   int64 \n",
+            " 36  PERD_PALA   int64 \n",
+            " 37  VACINA_COV  int64 \n",
+            "dtypes: int64(35), object(3)\n",
+            "memory usage: 502.6+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "data2021.info()"
       ]
     },
     {
