--- a/exploratory_Sociodemographic_Obstetrical.ipynb
+++ b/exploratory_Sociodemographic_Obstetrical.ipynb
@@ -120,16 +120,16 @@
         "df['CARDIOPATI'] = df['CARDIOPATI'].map(DICT_PADRAO)\n",
         "df['RENAL'] = df['RENAL'].map(DICT_PADRAO)\n",
         "df['ASMA'] = df['ASMA'].map(DICT_PADRAO)\n",
-        "df['DIABETES'] = df['DIABETES'].map(DICT_PADRAO)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iHqCp91J-1J9"
-      },
-      "source": [
-        "**Table 1: Sociodemographic and obstetrical characteristics of women with  laboratory confirmed SARS-CoV-2 infection.**"
+        "df['DIABETES'] = df['DIABETES'].map(DICT_PADRAO)\n",
+        "\n",
+        "df['OUT_MORBI']  = df['OUT_MORBI'].map(DICT_PADRAO)\n",
+        "df['HEMATOLOGI']  = df['HEMATOLOGI'].map(DICT_PADRAO)\n",
+        "df['SIND_DOWN']  = df['SIND_DOWN'].map(DICT_PADRAO)\n",
+        "df['HEPATICA']  = df['HEPATICA'].map(DICT_PADRAO)\n",
+        "df['NEUROLOGIC']  = df['NEUROLOGIC'].map(DICT_PADRAO)\n",
+        "df['PNEUMOPATI']  = df['PNEUMOPATI'].map(DICT_PADRAO)\n",
+        "df['IMUNODEPRE']  = df['IMUNODEPRE'].map(DICT_PADRAO)\n",
+        "df['OBESIDADE']  = df['OBESIDADE'].map(DICT_PADRAO)"
       ]
     },
     {
@@ -518,8 +518,6 @@
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
         "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
-        "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
         "columns = plot_df.iloc[:,0:3].columns\n",
@@ -715,8 +713,6 @@
         "column_order = ['Gamma', 'Gamma_Percentage', 'Delta', 'Delta_Percentage', 'Omicron', 'Omicron_Percentage', 'Total']\n",
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
-        "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
         "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
@@ -925,8 +921,6 @@
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
         "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
-        "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
         "columns = plot_df.iloc[:,0:3].columns\n",
@@ -1097,8 +1091,6 @@
         "column_order = ['Gamma', 'Gamma_Percentage', 'Delta', 'Delta_Percentage', 'Omicron', 'Omicron_Percentage', 'Total']\n",
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
-        "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
         "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
@@ -1315,8 +1307,6 @@
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
         "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
-        "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
         "columns = plot_df.iloc[:,0:3].columns\n",
@@ -1326,7 +1316,6 @@
         "    O = plot_df[i][j] #observed value\n",
         "    E = plot_df[i]['Total'] *plot_df['Total'][j] / plot_df['Total']['Total'] # expected frequency\n",
         "    chi_square += (O-E)**2/E\n",
-        "\n",
         "\n",
         "p_value = 1 - stats.chi2.cdf(chi_square, (len(rows)-1)*(len(columns)-1)) #The number of degrees of freedom of the χ2 independence test statistics: d.f. = (# rows -1) *(#columns-1)\n",
         "print('H₀: The two categorical variables have no relationship')\n",
@@ -1487,8 +1476,6 @@
         "column_order = ['Gamma', 'Gamma_Percentage', 'Delta', 'Delta_Percentage', 'Omicron', 'Omicron_Percentage', 'Total']\n",
         "percentage_df = percentage_df[column_order]\n",
         "display(percentage_df)\n",
-        "\n",
-        "#calculation of p-value : What is the evidence of a correlation between age (in general) and the type of covid variant?\n",
         "\n",
         "alpha = 0.05\n",
         "chi_square = 0\n",
@@ -1671,7 +1658,6 @@
         "    E = plot_df[i]['Total'] *plot_df['Total'][j] / plot_df['Total']['Total'] # expected frequency\n",
         "    chi_square += (O-E)**2/E\n",
         "\n",
-        "\n",
         "p_value = 1 - stats.chi2.cdf(chi_square, (len(rows)-1)*(len(columns)-1)) #The number of degrees of freedom of the χ2 independence test statistics: d.f. = (# rows -1) *(#columns-1)\n",
         "print('H₀: The two categorical variables have no relationship')\n",
         "print('p-value :',p_value)\n",
@@ -1841,7 +1827,6 @@
         "    O = plot_df[i][j] #observed value\n",
         "    E = plot_df[i]['Total'] *plot_df['Total'][j] / plot_df['Total']['Total'] # expected frequency\n",
         "    chi_square += (O-E)**2/E\n",
-        "\n",
         "\n",
         "p_value = 1 - stats.chi2.cdf(chi_square, (len(rows)-1)*(len(columns)-1)) #The number of degrees of freedom of the χ2 independence test statistics: d.f. = (# rows -1) *(#columns-1)\n",
         "print('H₀: The two categorical variables have no relationship')\n",
@@ -2013,7 +1998,6 @@
         "    E = plot_df[i]['Total'] *plot_df['Total'][j] / plot_df['Total']['Total'] # expected frequency\n",
         "    chi_square += (O-E)**2/E\n",
         "\n",
-        "\n",
         "p_value = 1 - stats.chi2.cdf(chi_square, (len(rows)-1)*(len(columns)-1)) #The number of degrees of freedom of the χ2 independence test statistics: d.f. = (# rows -1) *(#columns-1)\n",
         "print('H₀: The two categorical variables have no relationship')\n",
         "print('p-value :',p_value)\n",
@@ -2053,7 +2037,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Tabela 1: Características sociodemográficas e obstétricas de mulheres com infecção por SARS-CoV-2 confirmada laboratorialmente."
+        "**Table 1: Sociodemographic and obstetrical characteristics of women with  laboratory confirmed SARS-CoV-2 infection.**"
       ]
     },
     {
