--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -84,46 +84,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 51,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "FAIXA_ETARIA = ['0-19', '20-24', '25-29', '30-34', '35-39', '40+']\n",
-        "DIC_RACA = {1: 'White', 2: 'Black', 3: 'Others', 4: 'Others', 5: 'Others', 9: 'Ignored'}\n",
-        "\n",
-        "FAIXA_ESCOLARIDADE = ['None or Primary incomplete', 'Primary', 'Secondary','College or more']\n",
-        "DIC_ESCOLARIDADE = {0: 'None or Primary incomplete', 1: 'None or Primary incomplete', 2: 'Primary', 3: 'Secondary', 4: 'College or more', 5: 'Ignored', 9: 'Ignored'}\n",
-        "\n",
-        "FAIXA_GRAVIDEZ = ['First trimester','Second trimester','Third trimester','Gestation period ignored', 'Puerpera']\n",
-        "DICT_GRAVIDEZ = {1: 'First trimester', 2: 'Second trimester',3: 'Third trimester', 4: 'Gestation period ignored', 5 : 'Puerpera'}\n",
-        "\n",
-        "DICT_VACINA = {1: 'at least 1 dose', 2: 'Unvaccinated', 9: 'Ignored'}\n",
-        "FAIXA_VACINA = ['at least 1 dose','Unvaccinated']\n",
-        "\n",
-        "FAIXA_REGIAO = ['North','Northeast','Southeast','South','Midwest']\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "Pre processing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df['CS_RACA'] = df['CS_RACA'].map(DIC_RACA)\n",
-        "df['CS_ESCOL_N'] = df['CS_ESCOL_N'].map(DIC_ESCOLARIDADE)\n",
-        "df['GRAVIDEZ'] = df['GRAVIDEZ'].map(DICT_GRAVIDEZ)\n",
-        "\n",
-        "df['VACINA_COV'] = df['VACINA_COV'].fillna(9)\n",
-        "df['VACINA_COV'] =df['VACINA_COV'].astype(int)\n",
-        "df['VACINA_COV'] = df['VACINA_COV'].map(DICT_VACINA)"
       ]
     },
     {
@@ -150,6 +114,29 @@
       "metadata": {},
       "source": [
         "Logistic Regression for Covid Variant (GAMA VS OMICROM)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1    8117\n",
+              "3    3909\n",
+              "2     695\n",
+              "Name: VARIANTE_COVID, dtype: int64"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['VARIANTE_COVID'].value_counts()"
       ]
     },
     {
@@ -229,8 +216,8 @@
       "source": [
         "#lembrando que 1: gama, 2: delta e 3:omicrom\n",
         "df_temp = df.loc[df['VARIANTE_COVID'] != 2].copy() #gama versus omicrom\n",
-        "df_temp = df_temp.loc[df['EVOLUCAO'] < 4]\n",
-        "df_temp = df_temp.loc[df['UTI'] <3]\n",
+        "df_temp = df_temp.loc[df['EVOLUCAO'] != 9]\n",
+        "df_temp = df_temp.loc[df['UTI'] != 9]\n",
         "df_temp['EVOLUCAO'] = df_temp['EVOLUCAO'].replace({1: 2, 2: 1}) #cura = 2; obito = 1\n",
         "df_temp.reset_index(inplace = True, drop = True)\n",
         "\n",
