Power BI and readme

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Libraries"
+    "# Libraries"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Datasets"
+    "# Datasets"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_original = pd.read_csv('data/df_preprocessed.csv', delimiter=',')"
+    "df_original = pd.read_csv('Assets/df_preprocessed.csv', delimiter=',')"
    ]
   },
   {
@@ -76,27 +76,7 @@
     }
    ],
    "source": [
-    "df['VARIANTE_COVID'].value_counts() #1: gamma, 2: delta e 3:omicrom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12721, 42)"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
+    "df['VARIANTE_COVID'].value_counts() #1: gamma, 2: delta and 3:omicrom"
    ]
   },
   {
@@ -128,119 +108,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre processing"
+    "As in the pre-processing all NANs were replaced by 9, now a column having 60 percent of '9' indicates that 60 percent of its values represent ignored values or NANs. \n",
+    "\n",
+    "Categorizing missing values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12721, 42)"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Percentage of the number '9' in each column. As in the pre-processing all NANs were replaced by 9, now a column having 60 percent of '9' indicates that 60 percent of its values represent ignored values or NANs. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RENAL             64.051568\n",
-       "IMUNODEPRE        63.933653\n",
-       "HEPATICA          63.925792\n",
-       "SIND_DOWN         63.862904\n",
-       "NEUROLOGIC        63.839321\n",
-       "PNEUMOPATI        63.807877\n",
-       "HEMATOLOGI        63.800016\n",
-       "ASMA              63.454131\n",
-       "OBESIDADE         62.337867\n",
-       "CARDIOPATI        62.172785\n",
-       "DIABETES          61.724707\n",
-       "CS_ESCOL_N        56.937348\n",
-       "OUT_MORBI         55.420171\n",
-       "PUERPERA          54.862039\n",
-       "RAIOX_RES         45.947646\n",
-       "DOR_ABD           29.337316\n",
-       "PERD_PALA         28.535492\n",
-       "PERD_OLFT         28.480465\n",
-       "DIARREIA          28.283940\n",
-       "VOMITO            27.977360\n",
-       "FADIGA            26.719598\n",
-       "VACINA_COV        26.609543\n",
-       "GARGANTA          24.589262\n",
-       "SATURACAO         21.036082\n",
-       "DESC_RESP         20.871001\n",
-       "FEBRE             16.948353\n",
-       "DISPNEIA          16.696801\n",
-       "TOSSE             12.200299\n",
-       "CS_RACA           12.184577\n",
-       "UTI                9.079475\n",
-       "EVOLUCAO           6.446034\n",
-       "CS_GESTANT         1.218458\n",
-       "VARIANTE_COVID     0.000000\n",
-       "Regiao             0.000000\n",
-       "GRAVIDEZ           0.000000\n",
-       "SG_UF_NOT          0.000000\n",
-       "CRITERIO           0.000000\n",
-       "CLASSI_FIN         0.000000\n",
-       "DT_COLETA          0.000000\n",
-       "CS_SEXO            0.000000\n",
-       "NU_IDADE_N         0.000000\n",
-       "Regiao_nome        0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(df.eq(9).sum()/df.shape[0]*100).sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Categorizing missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\749729296.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.fillna('Missing', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.replace(9, np.nan, inplace=True)\n",
     "\n",
@@ -396,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interpretation:\n",
+    "*Interpretation:*\n",
     "\n",
     "Exposed group : Patient has the gamma variant\n",
     "\n",
@@ -1158,25 +1035,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3489347484.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3489347484.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] != 1].copy()  \n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
@@ -1415,25 +1276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\364441115.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\364441115.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] != 2].copy()  \n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
@@ -1672,25 +1517,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3424581190.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3424581190.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] != 3].copy()  \n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
@@ -1908,7 +1737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logistic regression for ICU admission"
+    "## Logistic regression for ICU admission"
    ]
   },
   {
@@ -2185,7 +2014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logistic regression for Death"
+    "## Logistic regression for Death"
    ]
   },
   {
@@ -2507,27 +2336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3884267023.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3884267023.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\3884267023.py:22: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df_temp['VACINA_COV'] = df_temp['VACINA_COV'].replace({\"No\": 0, \"Yes\": 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] == 1].copy()  #Gamma\n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
@@ -2648,27 +2459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\2407677451.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\2407677451.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\2407677451.py:22: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df_temp['VACINA_COV'] = df_temp['VACINA_COV'].replace({\"No\": 0, \"Yes\": 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] == 2].copy()  #Delta\n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
@@ -2789,27 +2582,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\1594960696.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\1594960696.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Missing' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df_temp['UTI_EVOLUCAO'].fillna('Missing', inplace=True)\n",
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_14228\\1594960696.py:22: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df_temp['VACINA_COV'] = df_temp['VACINA_COV'].replace({\"No\": 0, \"Yes\": 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_temp = df.loc[df['VARIANTE_COVID'] == 3].copy()  #Omicrom\n",
     "df_temp.reset_index(inplace=True, drop=True)\n",
