--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -6,19 +6,19 @@
         "id": "nZOF49s7hRtZ"
       },
       "source": [
-        "SRAG 2021 e 2022 - Banco de Dados de Síndrome Respiratória Aguda Grave - incluindo dados da COVID-19"
+        "# SRAG 2021 and 2022 - Severe Acute Respiratory Syndrome Database - including COVID-19 data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Libraries"
+        "## Libraries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 30,
       "metadata": {
         "id": "yYyCBlV9hRCx"
       },
@@ -28,7 +28,6 @@
         "import pandas as pd\n",
         "import io\n",
         "import requests\n",
-        "import seaborn as sn\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt"
       ]
@@ -37,12 +36,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Datasets"
+        "## Datasets"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 49,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -53,13 +52,14 @@
       },
       "outputs": [],
       "source": [
-        "original_data_2022 = pd.read_csv('Data\\INFLUD22-26-09-2022.csv', delimiter=';', usecols = ['CS_SEXO','CS_RACA','SG_UF_NOT','UTI','RAIOX_RES','CS_ESCOL_N','CS_GESTANT','PUERPERA','CLASSI_FIN','VACINA_COV','CRITERIO','CARDIOPATI','RENAL','ASMA','DIABETES','HEMATOLOGI','SIND_DOWN','HEPATICA','NEUROLOGIC','PNEUMOPATI','IMUNODEPRE','OBESIDADE','OUT_MORBI','EVOLUCAO','DT_COLETA','NU_IDADE_N','FEBRE','TOSSE','GARGANTA','DISPNEIA','DESC_RESP','SATURACAO','DIARREIA','VOMITO','DOR_ABD','FADIGA','PERD_OLFT','PERD_PALA'])\n",
-        "original_data_2021 = pd.read_csv('Data\\INFLUD21-2021.csv', delimiter=';', usecols = ['CS_SEXO','CS_RACA','SG_UF_NOT','UTI','RAIOX_RES','CS_ESCOL_N','CS_GESTANT','PUERPERA','CLASSI_FIN','VACINA_COV','CRITERIO','CARDIOPATI','RENAL','ASMA','DIABETES','HEMATOLOGI','SIND_DOWN','HEPATICA','NEUROLOGIC','PNEUMOPATI','IMUNODEPRE','OBESIDADE','OUT_MORBI','EVOLUCAO','DT_COLETA','NU_IDADE_N','FEBRE','TOSSE','GARGANTA','DISPNEIA','DESC_RESP','SATURACAO','DIARREIA','VOMITO','DOR_ABD','FADIGA','PERD_OLFT','PERD_PALA'])"
+        "original_data_2022 = pd.read_csv(\"C:/Users/lucas/Desktop/Unicamp/IC/Projeto Charles/INFLUD22-26-09-2022.csv\", delimiter=';', usecols = ['CS_SEXO','CS_RACA','SG_UF_NOT','UTI','RAIOX_RES','CS_ESCOL_N','CS_GESTANT','PUERPERA','CLASSI_FIN','VACINA_COV','CRITERIO','CARDIOPATI','RENAL','ASMA','DIABETES','HEMATOLOGI','SIND_DOWN','HEPATICA','NEUROLOGIC','PNEUMOPATI','IMUNODEPRE','OBESIDADE','OUT_MORBI','EVOLUCAO','DT_COLETA','NU_IDADE_N','FEBRE','TOSSE','GARGANTA','DISPNEIA','DESC_RESP','SATURACAO','DIARREIA','VOMITO','DOR_ABD','FADIGA','PERD_OLFT','PERD_PALA'])\n",
+        "\n",
+        "original_data_2021 = pd.read_csv(\"C:/Users/lucas/Desktop/Unicamp/IC/Projeto Charles/INFLUD21-2021.csv\", delimiter=';', usecols = ['CS_SEXO','CS_RACA','SG_UF_NOT','UTI','RAIOX_RES','CS_ESCOL_N','CS_GESTANT','PUERPERA','CLASSI_FIN','VACINA_COV','CRITERIO','CARDIOPATI','RENAL','ASMA','DIABETES','HEMATOLOGI','SIND_DOWN','HEPATICA','NEUROLOGIC','PNEUMOPATI','IMUNODEPRE','OBESIDADE','OUT_MORBI','EVOLUCAO','DT_COLETA','NU_IDADE_N','FEBRE','TOSSE','GARGANTA','DISPNEIA','DESC_RESP','SATURACAO','DIARREIA','VOMITO','DOR_ABD','FADIGA','PERD_OLFT','PERD_PALA'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -68,7 +68,7 @@
               "(447281, 38)"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -88,7 +88,7 @@
               "(1733517, 38)"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -224,7 +224,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -350,7 +350,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -363,73 +363,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Dataclean - 2021"
+        "## Dataclean - 2021"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 1733517 entries, 0 to 1733516\n",
-            "Data columns (total 38 columns):\n",
-            " #   Column      Dtype  \n",
-            "---  ------      -----  \n",
-            " 0   SG_UF_NOT   object \n",
-            " 1   CS_SEXO     object \n",
-            " 2   NU_IDADE_N  int64  \n",
-            " 3   CS_GESTANT  int64  \n",
-            " 4   CS_RACA     int64  \n",
-            " 5   CS_ESCOL_N  float64\n",
-            " 6   FEBRE       float64\n",
-            " 7   TOSSE       float64\n",
-            " 8   GARGANTA    float64\n",
-            " 9   DISPNEIA    float64\n",
-            " 10  DESC_RESP   float64\n",
-            " 11  SATURACAO   float64\n",
-            " 12  DIARREIA    float64\n",
-            " 13  VOMITO      float64\n",
-            " 14  PUERPERA    float64\n",
-            " 15  CARDIOPATI  float64\n",
-            " 16  HEMATOLOGI  float64\n",
-            " 17  SIND_DOWN   float64\n",
-            " 18  HEPATICA    float64\n",
-            " 19  ASMA        float64\n",
-            " 20  DIABETES    float64\n",
-            " 21  NEUROLOGIC  float64\n",
-            " 22  PNEUMOPATI  float64\n",
-            " 23  IMUNODEPRE  float64\n",
-            " 24  RENAL       float64\n",
-            " 25  OBESIDADE   float64\n",
-            " 26  OUT_MORBI   float64\n",
-            " 27  UTI         float64\n",
-            " 28  RAIOX_RES   float64\n",
-            " 29  DT_COLETA   object \n",
-            " 30  CLASSI_FIN  float64\n",
-            " 31  CRITERIO    float64\n",
-            " 32  EVOLUCAO    float64\n",
-            " 33  DOR_ABD     float64\n",
-            " 34  FADIGA      float64\n",
-            " 35  PERD_OLFT   float64\n",
-            " 36  PERD_PALA   float64\n",
-            " 37  VACINA_COV  float64\n",
-            "dtypes: float64(32), int64(3), object(3)\n",
-            "memory usage: 502.6+ MB\n"
-          ]
-        }
-      ],
-      "source": [
-        "data2021.info()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -454,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -463,7 +402,7 @@
               "(19831, 39)"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -477,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -486,7 +425,7 @@
               "(11995, 39)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -500,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -509,7 +448,7 @@
               "(11053, 39)"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -523,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -812,7 +751,7 @@
               "[8 rows x 36 columns]"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -825,12 +764,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Dataclean - 2022"
+        "## Dataclean - 2022"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -861,7 +800,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -870,7 +809,7 @@
               "(6603, 39)"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -884,7 +823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -893,7 +832,7 @@
               "(4023, 39)"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -907,7 +846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -916,7 +855,7 @@
               "(3806, 39)"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -930,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -1219,7 +1158,7 @@
               "[8 rows x 36 columns]"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1232,12 +1171,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Concatenating the two DataFrames "
+        "## Concatenating the two DataFrames "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1254,7 +1193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1648,36 +1587,21 @@
         "id": "6ZB8sNE2VBeY"
       },
       "source": [
-        "We considered the VOCs predominance period for:\n",
+        "*We considered the VOCs predominance period for:*\n",
         "\n",
-        "Gama P.1 (March 2021 to Jul 2021);\n",
+        "- Gama P.1 (March 2021 to Jul 2021);\n",
         "\n",
-        "Delta AY (Sept 2021 November 2021);\n",
+        "- Delta AY (Sept 2021 November 2021);\n",
         "\n",
-        "Omicrom BA (January 2022 aug 2022).\n",
+        "- Omicrom BA (January 2022 aug 2022).\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Gamma sample:  (8117, 40)\n",
-            "Delta sample:  (695, 40)\n",
-            "Omicron sample:  (3909, 40)\n",
-            "Number of pregnant women:  9544\n",
-            "Number of postpartum women:  3177\n",
-            "\n",
-            "Final size of the dataframe:  (12721, 40)\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Ensure 'DT_COLETA' column is of type Timestamp\n",
         "df_concat['DT_COLETA'] = pd.to_datetime(df_concat['DT_COLETA'])\n",
@@ -1698,8 +1622,30 @@
         "df_concat.loc[selecao_omicrom, 'VARIANTE_COVID'] = 3 # 3 for omicron\n",
         "\n",
         "df_concat = df_concat.loc[(df_concat['VARIANTE_COVID'] != 0)] # excluding other periods\n",
-        "df_concat.reset_index(inplace=True, drop=True)\n",
-        "\n",
+        "df_concat.reset_index(inplace=True, drop=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gamma sample:  (8117, 39)\n",
+            "Delta sample:  (695, 39)\n",
+            "Omicron sample:  (3909, 39)\n",
+            "Number of pregnant women:  9544\n",
+            "Number of postpartum women:  3177\n",
+            "\n",
+            "Final size of the dataframe:  (12721, 40)\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
         "print(\"Gamma sample: \", df_selection_gamma.shape)\n",
         "print(\"Delta sample: \", df_selection_delta.shape)\n",
         "print(\"Omicron sample: \", df_selection_omicron.shape)\n",
@@ -1719,7 +1665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -1744,12 +1690,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Merge datasets to obtain region names"
+        "## Merge datasets to obtain region names"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 47,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1789,7 +1735,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Histograms"
+        "## Histograms"
       ]
     },
     {
@@ -1825,7 +1771,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Save file"
+        "## Save file"
       ]
     },
     {
